// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overrides > should allow to add overrides 1`] = `
[
  FieldOverride {
    "construct": undefined,
    "id": undefined,
    "onChange": undefined,
    "priority": undefined,
    "props": {},
    "render": undefined,
    "targets": [],
    "type": "field",
  },
  ComponentOverride {
    "construct": undefined,
    "copyable": undefined,
    "deserialize": undefined,
    "disallow": [],
    "draggable": undefined,
    "droppable": undefined,
    "duplicable": undefined,
    "duplicate": undefined,
    "editable": undefined,
    "fields": [],
    "id": undefined,
    "priority": undefined,
    "render": undefined,
    "sanitize": undefined,
    "targets": [
      "foo",
    ],
    "type": "component",
    "usable": undefined,
  },
]
`;

exports[`Overrides > should allow to get an override 1`] = `
ComponentOverride {
  "construct": undefined,
  "copyable": undefined,
  "deserialize": undefined,
  "disallow": [],
  "draggable": undefined,
  "droppable": undefined,
  "duplicable": undefined,
  "duplicate": undefined,
  "editable": undefined,
  "fields": [],
  "id": undefined,
  "priority": undefined,
  "render": undefined,
  "sanitize": undefined,
  "targets": [
    "foo",
  ],
  "type": "component",
  "usable": undefined,
}
`;

exports[`Overrides > should alow to merge overrides 1`] = `
{
  "construct": [Function],
  "disallow": [],
  "fields": [],
  "targets": [
    "foo",
  ],
  "type": "component",
}
`;
